public final class TCPClient {
    private TCPClient() {
    }

    public static void main(String[] args) {
        ma.project.chat.client.ClientApplication.main(args);
    }
}
