public final class TCPServer {
    private TCPServer() {
    }

    public static void main(String[] args) {
        ma.project.chat.server.ServerApplication.main(args);
    }
}
